// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly for open file 1`] = `
<div
  className="measure-details-primary-actions"
>
  <LeakPeriodLegend
    className="spacer-left"
    component={
      Object {
        "key": "bar",
        "qualifier": "FIL",
      }
    }
    period={
      Object {
        "date": "2017-05-16T13:50:02+0200",
        "index": 1,
        "mode": "previous_version",
        "parameter": "6,4",
      }
    }
  />
</div>
`;

exports[`should display correctly for open file 2`] = `
<div
  className="measure-details-primary-actions"
>
  <LeakPeriodLegend
    className="spacer-left"
    component={
      Object {
        "key": "bar",
        "qualifier": "FIL",
      }
    }
    period={
      Object {
        "date": "2017-05-16T13:50:02+0200",
        "index": 1,
        "mode": "previous_version",
        "parameter": "6,4",
      }
    }
  />
</div>
`;

exports[`should render correctly 1`] = `
<div
  className="measure-details-header big-spacer-bottom"
>
  <div
    className="measure-details-primary"
  >
    <div
      className="measure-details-metric"
    >
      <IssueTypeIcon
        className="little-spacer-right text-text-bottom"
        query="reliability_rating"
      />
      Reliability Rating
      <span
        className="measure-details-value spacer-left"
      >
        <strong>
          <Measure
            metricKey="reliability_rating"
            metricType="RATING"
            value="3.0"
          />
        </strong>
      </span>
      <Tooltip
        overlay="component_measures.show_metric_history"
        placement="right"
      >
        <Link
          className="js-show-history spacer-left button button-small"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/activity",
              "query": Object {
                "branch": undefined,
                "custom_metrics": "reliability_rating",
                "graph": "custom",
                "id": "foo",
              },
            }
          }
        >
          <IconHistory />
        </Link>
      </Tooltip>
    </div>
    <div
      className="measure-details-primary-actions"
    >
      <LeakPeriodLegend
        className="spacer-left"
        component={
          Object {
            "key": "foo",
            "qualifier": "TRK",
          }
        }
        period={
          Object {
            "date": "2017-05-16T13:50:02+0200",
            "index": 1,
            "mode": "previous_version",
            "parameter": "6,4",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly for leak 1`] = `
<div
  className="measure-details-header big-spacer-bottom"
>
  <div
    className="measure-details-primary"
  >
    <div
      className="measure-details-metric"
    >
      <IssueTypeIcon
        className="little-spacer-right text-text-bottom"
        query="new_reliability_rating"
      />
      Reliability Rating on New Code
      <span
        className="measure-details-value spacer-left"
      >
        <strong>
          <Measure
            className="domain-measures-leak"
            metricKey="new_reliability_rating"
            metricType="RATING"
            value="3.0"
          />
        </strong>
      </span>
    </div>
    <div
      className="measure-details-primary-actions"
    >
      <LeakPeriodLegend
        className="spacer-left"
        component={
          Object {
            "key": "foo",
            "qualifier": "TRK",
          }
        }
        period={
          Object {
            "date": "2017-05-16T13:50:02+0200",
            "index": 1,
            "mode": "previous_version",
            "parameter": "6,4",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render with branch 1`] = `
<Link
  className="js-show-history spacer-left button button-small"
  onlyActiveOnIndex={false}
  style={Object {}}
  to={
    Object {
      "pathname": "/project/activity",
      "query": Object {
        "branch": "feature",
        "custom_metrics": "reliability_rating",
        "graph": "custom",
        "id": "foo",
      },
    }
  }
>
  <IconHistory />
</Link>
`;
